--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </style>
 </head>
 <body>
-    <a href="exp1.html">exp 1</a>
+    <a href="exp1.h">exp 1</a>
     <a href="exp1_2.zip">exp 1_2</a>
     <a href="exp2_3.zip">exp 2_3</a>
     <a href="exp3_1.zip">exp 3_1</a>
-    <a href="exp4_1.html">exp 4_1</a>
+    <a href="exp4_1.h">exp 4_1</a>
 </body>
 </html>
