--- a/cc/index.html
+++ b/cc/index.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <a href="1-2.txt">exp 1/2</a>
+    <a href="1-2.txt.txt">exp 1/2</a>
     <a href="3.txt">exp 3</a>
     <a href="5.txt">exp 5</a>
 </body>
