--- a/wad/index.html
+++ b/wad/index.html
@@ -27,13 +27,13 @@
     <a href="exp3_1.zip">exp 3_1</a>
     <a href="exp4_1.h">exp 4_1</a>
     
-    static site node:
+    <pre>static site node:
 npm i 
 node index.js
 
 angular :
 npm i 
-ng serve
+ng serve</pre>
 </body>
 </html>
 
