--- a/dsbda/index.html
+++ b/dsbda/index.html
@@ -39,6 +39,27 @@
         </tr>
 
         <tr>
+            <td>2-27</td>
+            <td>Flight Info System</td>
+            <td>Creating, Dropping, and altering Database tables.<br>
+                Load table with data<br>
+                Creating an external Hive table.<br>
+            </td>
+            <td><a href="2-27.txt">download</a></td>
+        </tr>
+
+        <tr>
+            <td>3-28</td>
+            <td>Flight Data</td>
+            <td>Create a Table<br>
+                Load table with data<br>
+                Insert new values and field in the table<br>
+                Join tables with Hive<br>
+            </td>
+            <td><a href="3-28.txt">download</a></td>
+        </tr>
+
+        <tr>
           <td>4-6-29-31</td>
           <td>Amazon</td>
           <td>Create data subsets<br>
@@ -49,7 +70,19 @@
           <td><a href="4-6-29-31-amazon.ipynb">download</a></td>
         </tr>
 
-        
+        <tr>
+            <td>5-30</td>
+            <td>Employee</td>
+            <td>Creating, Dropping, and altering Database tables.<br>
+                Table 1:Emp ID, Emp Name, Emp Designation, Dept.
+                Table 2:Emp ID, Salary, Leaves_Taken
+                Creating an external Hive table.<br>
+                Load table with data, insert new values and field in the table, <br>
+                Join tables with Hive(Table 1 and Table 2)<br>
+            </td>
+            <td><a href="5-30.txt">download</a></td>
+        </tr>
+
         <tr>
             <td>7-13-32-38</td>
             <td>Air Quality</td>
@@ -92,6 +125,19 @@
                 Multiple Line Graph<br>
             </td>
             <td><a href="boxplot- histogram-single-multiple line graph.ipynb">download</a></td>
+        </tr>
+
+        <tr>
+            <td>22-47</td>
+            <td>Student</td>
+            <td>Creating, Dropping, and altering Database tables.<br>
+                Table 1: Stu ID, Stu Name, Stu branch
+                Table 2: Stu ID, Subject, Marks
+                Load table with data<br>
+                Join tables with Hive(Table 1 and Table 2)<br>
+                Find list of students having marks greater than 80.<br>
+            </td>
+            <td><a href="22-47.txt">download</a></td>
         </tr>
 
         <tr>
